<resources>
    <string name="app_name">Banking</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="balance">Balance:</string>
    <string name="select_a_client">Select a client</string>
    <string name="amount">$%.2f</string>
    <string name="transactions">Transactions</string>
    <string name="arrow">arrow</string>
    <string name="logo">logo</string>
    <string name="basic_bank_system">Basic Bank system</string>
    <string name="client_details">Client Details</string>
    <string name="transfer_money">Transfer Money</string>
</resources>