<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeScreenFragment">

    <fragment
        android:id="@+id/homeScreenFragment"
        android:name="com.marwaeltayeb.banking.ui.home.HomeScreenFragment"
        tools:layout="@layout/fragment_home_screen" >

        <action
            android:id="@+id/action_homeScreenFragment_to_clientFragment"
            app:destination="@id/clientFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/clientFragment"
        android:name="com.marwaeltayeb.banking.ui.clients.ClientFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_client" >

        <action
            android:id="@+id/action_clientFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <action
            android:id="@+id/action_clientFragment_to_transactionFragment"
            app:destination="@id/transactionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <argument
            android:name="client"
            app:argType="com.marwaeltayeb.banking.data.model.Client" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.marwaeltayeb.banking.ui.details.DetailsFragment"
        android:label="@string/client_details"
        tools:layout="@layout/fragment_details" >

        <action
            android:id="@+id/action_detailsFragment_to_transferFragment"
            app:destination="@id/transferFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

        <argument
            android:name="transferor"
            app:argType="string" />

        <argument
            android:name="transferor_id"
            app:argType="integer" />

        <argument
            android:name="amount"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/transferFragment"
        android:name="com.marwaeltayeb.banking.ui.transfer.TransferFragment"
        android:label="@string/transfer_money"
        tools:layout="@layout/fragment_transfer" >

        <action
            android:id="@+id/action_transferFragment_to_clientFragment"
            app:destination="@id/clientFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/transactionFragment"
        android:name="com.marwaeltayeb.banking.ui.transactions.TransactionFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transaction" />
</navigation>

